ReckonMobileDevV04/resources/sass/app.scss
/* ... */
//
//
//
//PakDev Code Starts here...
//
//
//	
    .rm-pl5{
        padding-left: 5px;
    }
    .rm-pl0{
        padding-left: 0px !important;
    }
    .rm-pr5{
        padding-right: 5px;
    }
    .rm-ml5{
        margin-left: 5px;
    }
    .rm-mr5{
        margin-right: 5px;
    }
    .rm-mr20{
        margin-right: 20px;
    }
    .rm-fontsize100{
        font-size: 100%;
    }    
    .rm-p5{
        padding: 5px;
    }
	.rm-pt5{ padding-top:5px !important;}
	.rm-m-1{ margin: -1px -5px -1px -5px; margin-top: -1px;}
	.rm-tablelayout{
		table-layout: fixed;
	}

	.rm-textlimit{
		white-space: nowrap;
		overflow: hidden;text-overflow: ellipsis;	
	}

	.rm-alignr{ text-align: right !important; }
    .rm-alignl{ text-align: left !important;}
    .rm-inputel-alignl{ .x-input-el{ text-align: left; margin-left: 5px; font-weight: normal;}	 }
    .rm-floatl { float: left !important;}
    .rm-floatr { float: right !important;}
    .rm-floatr15 { position: absolute; right: 15px;}

//cashbook.scss
.rm-orgnametext{
		color:#646464;font-size:90%;
		font-weight:bold;
	}
	.rm-booknametext{
		color:#969696;font-size:80%;
		font-weight:bold;
	}
	.rm-accesstext{
		color:#969696;
        font-size: 68%;
		font-weight: normal;
        text-transform: uppercase;
	}

	@mixin rm-listdynamiccolor{
		width:10px;height:10px;float:left;
		background:#d2d2d2;margin-top:5px;
	}

    .rm-list-cashbook {
        @include rm-listdynamiccolor;
        background:#ff0913;
    }

    .rm-list-readonly-cashbook {
        @include rm-listdynamiccolor;
        background:#e7e7e7;
    }
	
	.rm-nextgrayarrow {
		background-position:right; 
        background-repeat: no-repeat;
		padding-right: 20px;
        
	}
	
	.rm-nextgrayarrow{		
		background-image: url("../images/icons/rm-listitem-arrow.svg");
        background-size: 10px 20px; 
	}
	
	
//bills.scss
.rm-bill-listcls{
		.rm-booknametext{
			color:#969696;font-size:80%;
			font-weight:normal;
		}
	}
	.rm-reddoticon, .rm-reddotright{
		//background-image: theme_image($theme-name, "pictos/base64/redDot.png");
		background-image: url("../images/redDot.svg"); 
		padding-left:18px;
	}
	.rm-plusicon{
		background-image: url("../images/icons/rm-plus.png");
        background-position-x: center;
        background-position-y: 41%;
        background-repeat: no-repeat;
        margin-left: -10px;
        margin-right: 5px;
        margin-top: -5px;
        padding: 14px;
	}
	.rm-reddot {
		background: red;
		border-radius: 3px;
		width: 6px;
		height: 6px;
		display: inline-block;
		margin-left: 5px;
		margin-bottom: 1px;
	}

//Timesheets
.rm-listdynamicicon{
		padding-left:30px;
		background-position:left center; background-repeat: no-repeat;
			&.rm-empty {
				//background-image: theme_image($theme-name, "pictos/base64/empty.png") !important;
				background-image: url("../images/empty.png") !important; 
			}
			&.rm-download {
				//background-image: theme_image($theme-name, "pictos/base64/download.png") !important;
				background-image: url("../images/download.png") !important; 
			}
			&.rm-dummyIcon {
				//background-image: theme_image($theme-name, "pictos/base64/dummyIcon.png") !important;
				background-image: url("../images/dummyIcon.png") !important; 
			}
	}
.rm-timesheetrowfields{
    color: #969696;
    font-size: 80%;
    font-weight: normal;
}

//Expenses
.rm-statustext{
    color:#969696;
    font-size:68%;
	font-weight:normal;
    margin-right: 22px;
}
.rm-expensesrowfields{
    color: #969696;
    font-size: 80%;
    font-weight: normal;
}
//
//
//PakDev Code Ends here...
//
//

//CustomerInvoices
.rm-customerinvoices-invoicecount{
	color: #969696; 
    font-size: 90%;
	font-weight: normal;
}

.rm-addnotefield{
    .x-input-el{
        text-align: left;	
    	color: #969696;
        font-size: 0.8em;
        font-weight: bold;
    }
}

//Invoices
.rm-invoices-invoicecode{
	color: #969696; 
    font-size: 85%;
    font-weight: bold;
}

.rm-invoices-invoiceamount{
	color: #646464;
    font-size: 90%;
	font-weight: bold;
}
.rm-invoices-duestatus{
    color: #969696;
    font-size: 85%;
	//font-weight: bold;
}
.rm-emailreminder{
	color: #0096CF;     
	font-weight: normal;		
}

//InvoiceTimeSelect
.rm-notelink{
	color: #0096CF; 
    font-size: 80%;
	font-weight: normal;
}

.rm-invoicetimeselect-date{
	color: #969696;
    font-size: 80%;
	font-weight: bold;
}

.rm-invoicetimeselect-project{
	color: #969696;
    font-size: 80%;
	font-weight: normal;
}

.rm-invoicetimeselect-desc{
    color: #969696;
    font-size: 80%;
    font-weight: bold;
}

.rm-billabletext{
	color: #969696;
    font-size: 68%;
	padding-right: 12px;
	font-weight: normal;
}

.rm-invoiceitemtext{
	color: #0096D0; 
	font-size: 86%;     
}

.rm-invoiceitemamount{
    text-align: right;
    color: #646464;
    font-size: 86%;     
}

.rm-checkbox-on{	
	background-image: url("../images/icons/checkbox-on.svg"); 
}

.rm-checkbox-off{	
	background-image: url("../images/icons/checkbox-off.svg"); 
}

.rm-checkbox{
	background-position: center; 
    background-repeat: no-repeat;
    background-size: 21px;
	width: 23px;
	height: 23px;    
}

.rm-checkbox-label{
		color: #969696;
        font-size: 80%; 
		font-weight: normal;
        margin-left: 5px;
        margin-right: 5px;
}

.rm-budgetlineitem-name{
		color: #646464; 
        font-size: 90%;
		font-weight: bold;
}

.rm-budgetlineitem-field{
		color: #646464;
        font-size: 72%;	
}

.rm-budgetlineitem-value{        
		color: #969696;
        font-size: 84%; 
        font-weight: bold;		
}

.rm-budgetlineitem-total-bgcolor{
		background: #F0F0F0;
}

.rm-pricevalue{
		color: #646464;
        font-size: 90%;
		font-weight: normal;
}

.rm-historydate{
		color: #C8C8C8;
        font-size: 70%;		
}

.rm-historytext{
		color: #969696;
        font-size: 80%;         	
}

.rm-invoiceaction-bg{
	background-color: #FFFFFF;
	border-bottom: 1px solid #DBDBDB;    
}

.rm-notes-icon.x-field{
	@include rm_flatfield("pictos/note.png");
}
/* ... */

